--- a/service.html
+++ b/service.html
@@ -11,10 +11,13 @@
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
+    <link rel="stylesheet" href="service.css">
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Ubuntu:wght@400;500&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -34,14 +37,13 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
         </div>
     </div>
     <!-- Spinner End -->
-
-
     <!-- Topbar Start -->
     <div class="container-fluid bg-light p-0">
         <div class="row gx-0 d-none d-lg-flex">
@@ -61,9 +63,11 @@
                     <small>Phone Number</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-google"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -97,8 +101,7 @@
                 <h1 class="display-3 text-white mb-3 animated slideInDown">Products</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
+                        <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
                         <li class="breadcrumb-item text-white active" aria-current="page">Products</li>
                     </ol>
                 </nav>
@@ -107,13 +110,193 @@
     </div>
     <!-- Page Header End -->
 
+    <!-- PRODUCT SECTION -->
+    <div class="shell">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Ethnic</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <!-- <div class="description-prod">
+                                <p>Description Product tell me how to change playlist height size like 600px in html5
+                                    player. player good work now check this link</p>
+                            </div> -->
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
+                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Introvert</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <!-- <div class="description-prod">
+                                <p>Description Product tell me how to change playlist height size like 600px in html5
+                                    player. player good work now check this link</p>
+                            </div> -->
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
+                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://1.bp.blogspot.com/-XL_Ba-178Fo/WVSvm5AbApI/AAAAAAAAAK4/X5109HTqUiAhPjbmz4NFVHcpL7ZWe6T3ACPcBGAYYCw/s1600/wow-29.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Beauty</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <!-- <div class="description-prod">
+                                 <p>Description Product tell me how to change playlist height size like 600px in html5
+                                    player. player good work now check this link</p>
+                            </div> -->
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
+                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://3.bp.blogspot.com/-iUes8qr4uC8/WVSvl6Wf_fI/AAAAAAAAAKs/JiTUUVvdbqEC_QGGaQhuVJiezIN3LIqEgCPcBGAYYCw/s1600/IMG_5367-bp.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Drama</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart cvf ggf gfg g</h3>
+                            </div>
+                            <!-- <div class="description-prod">
+                                <p>Description Product tell me how to change playlist height size like 600px in html5
+                                    player. player good work now check this link</p>
+                            </div> -->
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Ethnic</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Introvert</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://1.bp.blogspot.com/-XL_Ba-178Fo/WVSvm5AbApI/AAAAAAAAAK4/X5109HTqUiAhPjbmz4NFVHcpL7ZWe6T3ACPcBGAYYCw/s1600/wow-29.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Beauty</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart</h3>
+                            </div>
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img"><img
+                                src="https://3.bp.blogspot.com/-iUes8qr4uC8/WVSvl6Wf_fI/AAAAAAAAAKs/JiTUUVvdbqEC_QGGaQhuVJiezIN3LIqEgCPcBGAYYCw/s1600/IMG_5367-bp.jpg"
+                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Drama</span>
+                            </div>
+                            <div class="title-product">
+                                <h3>My face not my heart cvf ggf gfg g</h3>
+                            </div>
+                            
+                            <div class="card-footer">
+                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001
+                    </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bharatspectra.com</p>
                     <div class="d-flex pt-2">
@@ -123,13 +306,6 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
-                    <p class="mb-4">09.00 AM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">09.00 AM - 12.00 PM</p>
-                </div> -->
                 <div class="col-lg-4 col-md-6 ">
                     <h4 class="text-light mb-4">Services</h4>
                     <a class="btn btn-link" href="/index.html">Home</a>
@@ -142,7 +318,8 @@
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button"
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
             </div>
@@ -152,18 +329,8 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="">Business World Trade</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="">Business World Trade</a>
                     </div>
-                    <!-- <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
