--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/banner.jpg" alt="Image">
+                    <img class="w-100" src="img/WhatsApp Image 2023-12-11 at 5.33.42 PM.jpeg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center">
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
@@ -103,7 +103,7 @@
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 animated slideInDown">Read more<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="img/carousel-1.png" alt="">
+                                    <img class="img-fluid" src="img/WhatsApp Image 2023-12-11 at 5.52.07 PM.jpeg" alt="">
                                 </div>
                             </div>
                         </div>
