--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 animated slideInDown">Read more<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="img/WhatsApp Image 2023-12-11 at 5.52.07 PM.jpeg" alt="">
+                                    <img class="img-fluid" src="img/WhatsApp Image 2023-12-11 at 5.52.07 PM.jpeg " alt="">
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 pt-4" style="min-height: 400px;">
                     <div class="position-relative h-100 wow fadeIn" data-wow-delay="0.1s">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/WhatsApp Image 2023-12-11 at 6.08.42 PM.jpeg" style="object-fit: cover;" alt="">
                         <div class="position-absolute top-0 end-0 mt-n4 me-n4 py-4 px-5" style="background: rgba(0, 0, 0, .08);">
                             <h1 class="display-4 text-white mb-0">15 <span class="fs-4">Years</span></h1>
                             <h4 class="text-white">Experience</h4>
